--- a/templates/forms/IPCRForm_Submit.html
+++ b/templates/forms/IPCRForm_Submit.html
@@ -32,5 +32,5 @@
         {% endif %}
       {% endfor %}
     </div>
-    <button type="submit">Submit</button>
+    <button type="submit" name="save">Save</button>
   </form>
