--- a/templates/forms/IPCRForm_Submit.html
+++ b/templates/forms/IPCRForm_Submit.html
@@ -33,7 +33,7 @@
       {% endfor %}
     </div>
     <button type="submit" name="save">Save</button>
-    <h4>Do you want to submit your form?</h4>
-    <button type="submit" name="submit">Submit</button>
 
   </form>
+  <h4>Do you want to submit your form?</h4>
+  <button><a href="{% url 'IPCR_Form_Submit' %}">Submit</a></button>
