--- a/templates/home/member_home.html
+++ b/templates/home/member_home.html
@@ -52,7 +52,7 @@
         <div class="dashboard_banner_box"></div>
         <div class="dashboard_banner_content">View the Summary of reports here in the dashbpard</div>
         <div class="dashboard_banner_image"><img src="{% static 'home/img/dashboard_banner_image.png' %}"></div>
-        <button class="dashboard_button"><b href = "{% url 'dashboard' %}">Dashboard</b></button>
+        <button class="dashboard_button"><a href = "{% url 'dashboard' %}">Dashboard</a></button>
     </section>
     <section class = "faq_banner" id="faq_banner">
         <div class="faq_banner_box"></div>
