Updates to IPCR and IPMT forms to be more dynamic

--- a/templates/forms/IPCRForm_SubmitNow.html
+++ b/templates/forms/IPCRForm_SubmitNow.html
@@ -4,7 +4,7 @@
   {% load static %}
   <meta charset = "utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type = "text/css" href="css/style.css">
+  <link rel="stylesheet" type = "text/css" href="static/IPCR/style.css">
   <link rel="stylesheet"href = "https://unpkg.com/boxiconx@latest/css/boxicons.min.css">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,7 +37,7 @@
             <div class = "quest"> Are you sure you want to submit your IPCR form?</div>
             <button class = "yes" type="submit">Yes</button>
             <button class = "no" type="submit" name="no">No</button>
-        </form></div>
+          </form></div>
         <section class ="ipcr_menu" id="ipcr_menu">
             <!-- <div class ="ipcr_home"></div> -->
                  <button class="ipcr_home"><a href="{% url 'member_home' %}">Home</a></button>
@@ -60,4 +60,4 @@
                  <button class="ipcr_iptm_form"><a href="{% url 'member_notification' %}">IPTM FORM</a></button>
           </section>
        </body>
-      
+    </html>
