Added search functionality to all faculty list

--- a/templates/faculty_list/admin_faculty_list.html
+++ b/templates/faculty_list/admin_faculty_list.html
@@ -1,3 +1,9 @@
+<form method="GET">
+  <input type="text" name="q" placeholder="Search..." value="{{ request.GET.q }}">
+  <button type="submit">Search</button>
+</form>
+
+
 {% if matching_users %}
     <ul>
         {% for user in matching_users.distinct %}
