Changes to download and view of IPCR

--- a/templates/downloads/IPCRForm.html
+++ b/templates/downloads/IPCRForm.html
@@ -43,7 +43,7 @@
 <p style="position:absolute;top:309px;left:166px;white-space:nowrap" class="ft10">NAME&#160;</p>
 <p style="position:absolute;top:268px;left:336px;white-space:nowrap" class="ft18">Reviewed&#160;by:&#160;<br/>{{ data2.reviewer }}&#160;</p>
 <p style="position:absolute;top:309px;left:447px;white-space:nowrap" class="ft10">NAME&#160; </p>
-<p style="position:absolute;top:268px;left:617px;white-space:nowrap" class="ft18">Approved&#160;by:&#160;<br/>&#160;</p>
+<p style="position:absolute;top:268px;left:617px;white-space:nowrap" class="ft18">Approved&#160;by:&#160;<br/>{{ data.approver }}&#160;</p>
 <p style="position:absolute;top:309px;left:729px;white-space:nowrap" class="ft10">NAME&#160;</p>
 <p style="position:absolute;top:329px;left:165px;white-space:nowrap" class="ft10">RATEE&#160;</p>
 <p style="position:absolute;top:329px;left:403px;white-space:nowrap" class="ft10">CAMPUS&#160;DIRECTOR&#160;</p>
