--- a/templates/downloads/IPCR_Download.html
+++ b/templates/downloads/IPCR_Download.html
@@ -1,5 +1,61 @@
+<h2>Current SY {{ current_SY2 }} - {{ current_SY1 }} First semester IPCR:</h2>
 
-<button><a href="{% url 'Show_IPCR' %}">View IPCR</a></button>
-<button><a href="{% url 'download_pdf' %}">Download IPCR</a></button>
+<h3>First semester Midterms IPCR:</h3>
+<button><a href="{% url 'firstmidsem_ViewIPCR' %}">View IPCR</a></button>
+<button><a href="{% url 'firstmidsem_download_pdf' %}">Download IPCR</a></button>
+
+<h3>First semester Finalterms IPCR:</h3>
+<button><a href="{% url 'firstfinalsem_ViewIPCR' %}">View IPCR</a></button>
+<button><a href="{% url 'firstfinalsem_download_pdf' %}">Download IPCR</a></button>
+
+<h2>Current SY {{ current_SY2 }} - {{ current_SY1 }} Second semester IPCR:</h2>
+
+<h3>Second semester Midterms IPCR:</h3>
+<button><a href="{% url 'secondmidsem_ViewIPCR' %}">View IPCR</a></button>
+<button><a href="{% url 'secondmidsem_download_pdf' %}">Download IPCR</a></button>
+
+<h3>Second semester Finalterms IPCR:</h3>
+<button><a href="{% url 'secondfinalsem_ViewIPCR' %}">View IPCR</a></button>
+<button><a href="{% url 'secondfinalsem_download_pdf' %}">Download IPCR</a></button>
+
+<h2>SY {{ last_SY2 }} - {{ last_SY1 }} First semester IPCR:</h2>
+
+<h3>First semester Midterms IPCR:</h3>
+<button><a href="{% url 'last_firstmidsem_ViewIPCR' %}">View IPCR</a></button>
+<button><a href="{% url 'last_firstmidsem_download_pdf' %}">Download IPCR</a></button>
+
+<h3>First semester Finalterms IPCR:</h3>
+<button><a href="{% url 'last_firstfinalsem_ViewIPCR' %}">View IPCR</a></button>
+<button><a href="{% url 'last_firstfinalsem_download_pdf' %}">Download IPCR</a></button>
+
+<h2>SY {{ last_SY2 }} - {{ last_SY1 }} Second semester IPCR:</h2>
+
+<h3>Second semester Midterms IPCR:</h3>
+<button><a href="{% url 'last_secondmidsem_ViewIPCR' %}">View IPCR</a></button>
+<button><a href="{% url 'last_secondmidsem_download_pdf' %}">Download IPCR</a></button>
+
+<h3>First semester Finalterms IPCR:</h3>
+<button><a href="{% url 'last_secondfinalsem_ViewIPCR' %}">View IPCR</a></button>
+<button><a href="{% url 'last_secondfinalsem_download_pdf' %}">Download IPCR</a></button>
+
+<h2>SY {{ last_last_SY2 }} - {{ last_last_SY1 }} First semester IPCR:</h2>
+
+<h3>First semester Midterms IPCR:</h3>
+<button><a href="{% url 'last_last_firstmidsem_ViewIPCR' %}">View IPCR</a></button>
+<button><a href="{% url 'last_last_firstmidsem_download_pdf' %}">Download IPCR</a></button>
+
+<h3>First semester Finalterms IPCR:</h3>
+<button><a href="{% url 'last_last_firstfinalsem_ViewIPCR' %}">View IPCR</a></button>
+<button><a href="{% url 'last_last_firstfinalsem_download_pdf' %}">Download IPCR</a></button>
+
+<h2>SY {{ last_last_SY2 }} - {{ last_last_SY1 }} Second semester IPCR:</h2>
+
+<h3>Second semester Midterms IPCR:</h3>
+<button><a href="{% url 'last_last_secondmidsem_ViewIPCR' %}">View IPCR</a></button>
+<button><a href="{% url 'last_last_secondmidsem_download_pdf' %}">Download IPCR</a></button>
+
+<h3>First semester Finalterms IPCR:</h3>
+<button><a href="{% url 'last_last_secondfinalsem_ViewIPCR' %}">View IPCR</a></button>
+<button><a href="{% url 'last_last_secondfinalsem_download_pdf' %}">Download IPCR</a></button>
 
 
